--- a/Web.config
+++ b/Web.config
@@ -30,14 +30,14 @@
 	</system.web>
 
 	<btnetSettings>
-
+     
 		<!--
 			Change this to point to your database
 		-->
 
     	<add
 			key="ConnectionString"
-			value="server=(local);database=btnet;user id=sa;password=;Trusted_Connection=no"
+			value="server=(local);database=btnet2;user id=sa;password=;Trusted_Connection=no"
 		/>
 
 		<!--
@@ -330,7 +330,7 @@
 		0 = hide
 		-->
 
-		<add key="DefaultPermissionLevel" value="2"/>
+		<add key="DefaultPermissionLevel" value="0"/>
 
 		<!--
 		TextArea for Custom fields
@@ -369,16 +369,6 @@
 		<add key="BugLinkMarker" value="bugid#"/>
 
 		<!--
-
-		Uncomment this to customize the logo in the upper left.   You have to HTML encode
-		all the HTML tags embedded here.
-
-		-->
-		<!--
-		<add key="LogoHtml" value="&lt;td style='color: red; font-weight: bold;'&gt;Your Logo" />
-		-->
-
-		<!--
 		In dropdowns featuring users, do you want to see the logon names or their full names, in
 		"LastName, FirstName" format?
 		
@@ -410,9 +400,10 @@
 		You have to HTML encode any HTML tags embedded here.
 
 		-->
+		<!--
 		<add key="CustomBugLinkLabel" value="YOUR LINK"/>
-		<add key="CustomBugLinkUrl" value="view_file_revisions.aspx"/>
-		
+		<add key="CustomBugLinkUrl" value="your_url.aspx"/>
+		-->
 
 
 
@@ -575,6 +566,14 @@ Don't call us, we'll call you."/>
 		<add key="StatusResultingFromIncomingEmail" value="0"/>
 
 
+		<!--
+			Make it harder for people to loose data by navigating away from the add/edit bug
+			page by turning this on.
+		-->
+		
+		<add key="PromptBeforeLeavingEditBugPage" value="0"/>
+
+
 
 		<!-- 
 			If you set this to 1, you will see an additional "Visible to internal users only"
@@ -591,6 +590,48 @@ Don't call us, we'll call you."/>
 			project. 
 		-->
 		<add key="EnableInternalOnlyPosts" value="0"/>
+
+		<!--
+			Turning this on make a "revisions" link visible on the add/edit bug page.
+			See the "Subversion" folder for hook scripts that will integrate Subversion with
+			BugTracker.NET.  When you do a Subversion checkin and include the BugTracker.NET
+			bug id, the scripts will update a table in the BugTracker.NET database's
+			bug_file_revisions table.
+			
+			For step-by-step instructions on how to use Subversion with BugTracker.NET,
+			see http://ifdefined.com/README.html 
+			
+		-->
+		<add key="EnableSubversionIntegration" value="1"/>
+		
+		<!-- 
+			This setting turns on the links to "diff" and "history" in 
+			the view_svn_file_revisions.aspx page.
+			
+			You could leave this blank but turn on the WebSvnUrl setting,
+			or vice versa, or turn them both on.
+	
+		-->
+		<add key="SubversionRepositoryUrl" value="svn://127.0.0.1/svnrepos/"/>  <!-- with the trailing slash!! -->
+		
+		<!-- svn.exe, the Subversion client, needs to be on the web server -->
+		<add key="SubversionPathToSvn" value="svn.exe"/>
+		
+		<!-- If your Subversion repository doesn't allow anonymous reads, then put 
+		the Subversion user and password here that the web server will pass to svn.exe -->
+		<add key="SubversionUsername" value=""/>
+		<add key="SubversionPassword" value=""/>
+		
+		<!-- 
+			This adds another link, "WebSvn" to view_svn_file_revisions.aspx, a link to WebSvn. 
+			Make sure to replace the & symbol with &amp; in your URL.
+			The logic in view_svn_file_revisions.aspx replaces $PATH and $REV with
+			the path and revision of the file.
+			Note the leading ? before $PATH.
+		-->
+		<!--
+		<add key="WebSvnUrl" value="http://127.0.0.1:8080/websvn/filedetails.php?repname=svnrepos&amp;path=/$PATH&amp;rev=$REV&amp;sc=0"/>
+		-->
 		
 	</btnetSettings>
 
