git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@22 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -52,7 +52,7 @@
 			located.
 
 		-->
-		<add key="UploadFolder" value="c:\temp\upload" />
+		<add key="UploadFolder" value="" />
 		<add key="MaxUploadSize" value="1000000" />
 
 
@@ -328,9 +328,11 @@
 		2 = allow everything
 		1 = allow view only
 		0 = hide
+		
 		-->
 
 		<add key="DefaultPermissionLevel" value="2"/>
+
 
 		<!--
 		TextArea for Custom fields
@@ -632,7 +634,8 @@ Don't call us, we'll call you."/>
 		<!--
 		<add key="WebSvnUrl" value="http://127.0.0.1:8080/websvn/filedetails.php?repname=svnrepos&amp;path=/$PATH&amp;rev=$REV&amp;sc=0"/>
 		-->
-		
+
+		<add key="StoreAttachmentsInDatabase" value="1" />
 	</btnetSettings>
 
 </configuration>
