--- a/Web.config
+++ b/Web.config
@@ -107,6 +107,7 @@
 			$SHORTDESC$
 			$PROJECT$
 			$CATEGORY$
+			$ORGANIZATION$
 			$PRIORITY$
 			$STATUS$
 			$TRACKINGID$ - from the "TrackingIdString" setting
