git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@43 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -27,6 +27,10 @@
 		<sessionState mode="InProc" timeout="20" />
 		<compilation debug="true" />
 		<pages validateRequest="true" />
+	
+	
+		<httpRuntime executionTimeout="300" maxRequestLength="51200"/>
+	
 	</system.web>
 
 	<btnetSettings>
@@ -53,7 +57,10 @@
 
 		-->
 		<add key="UploadFolder" value="" />
-		<add key="MaxUploadSize" value="1000000" />
+		<!--<add key="MaxUploadSize" value="1000000" />-->
+		<add key="MaxUploadSize" value="20111222" />
+		
+		
 
 
 		<!--
