git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@51 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -102,7 +102,7 @@
 			You can "subscribe" to email notifications on a per-bug basis.
 			You will receive an email whenever the bug is updated.
 		-->
-		<add key="NotificationEmailEnabled" value="1"/>
+		<add key="NotificationEmailEnabled" value="0"/>
 		<add key="NotificationEmailFrom" value="FROM EMAIL HERE"/>
 
 		<!--
@@ -150,13 +150,11 @@
 		These settings work with my GMail account
 		-->
 		
-		<!--
 		<add key="SmtpServer" value="smtp.gmail.com"/>
 		<add key="SmtpServerAuthenticateUser" value="ctrager@gmail.com"/>
 		<add key="SmtpServerPort" value="465"/>
 		<add key="SmtpUseSSL" value="1"/>
-		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
-		-->
+		<add key="SmtpServerAuthenticatePassword" value="ggo6hnoda"/>
 		
 
 		<!--
