git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@57 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -255,8 +255,8 @@
 			custom fields.  For more info, visit
 			http://www.ifdefined.com/README.html
 		-->
-		<add key="ShowUserDefinedBugAttribute" value="0"/>
-		<add key="UserDefinedBugAttributeName" value="YourAttribute"/>
+		<add key="ShowUserDefinedBugAttribute" value="1"/>
+		<add key="UserDefinedBugAttributeName" value="MyUDF"/>
 
 
 		<!--
