git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@59 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -154,7 +154,7 @@
 		<add key="SmtpServerAuthenticateUser" value="ctrager@gmail.com"/>
 		<add key="SmtpServerPort" value="465"/>
 		<add key="SmtpUseSSL" value="1"/>
-		<add key="SmtpServerAuthenticatePassword" value="ggo6hnoda"/>
+		<add key="SmtpServerAuthenticatePassword" value=""/>
 		
 
 		<!--
