git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@85 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -32,8 +32,9 @@
 		</compilation>
 		<pages validateRequest="true" />
 	
-	
+		<!-- A few people over the years have needed to override the default IIS settings...
 		<httpRuntime executionTimeout="300" maxRequestLength="51200"/>
+		-->
 	
 	</system.web>
 
@@ -47,25 +48,7 @@
 			key="ConnectionString"
 			value="server=(local);database=btnet3;user id=sa;password=;Trusted_Connection=no"
 		/>
-
-		<!--
-			These entries control where attachment file are uploaded to and how large
-			the files can be.
-			
-			For the UploadFolder setting, if you specify the folder starting with a 
-			drive letter or the \\ that indicates a UNC path, it's treated as a full path.  
-			For example: c:\\something or \\somemachine\something
-
-			Otherwise it's treated as a path relative to where you virtual directory is
-			located.
-
-		-->
-		<add key="UploadFolder" value="" />
-		<!--<add key="MaxUploadSize" value="1000000" />-->
-		<add key="MaxUploadSize" value="20111222" />
-		
-		
-
+	
 
 		<!--
 			Used when creating absolute href's.  For example, in notification emails.
@@ -265,12 +248,6 @@
 
 
 		<!--
-			If you don't like seeing the SQL on the queries or search page.
-		-->
-		<add key="HideSql" value="0"/>
-
-
-		<!--
 			This controls whether entries are inserted into the bug_history table
 			when the user changes description, category, priority, assigned to. or status.
 		-->
@@ -352,7 +329,6 @@
 		2 = allow everything
 		1 = allow view only
 		0 = hide
-		
 		-->
 
 		<add key="DefaultPermissionLevel" value="2"/>
@@ -645,7 +621,33 @@ Don't call us, we'll call you."/>
 		<add key="WebSvnUrl" value="http://127.0.0.1:8080/websvn/filedetails.php?repname=svnrepos&amp;path=/$PATH&amp;rev=$REV&amp;sc=0"/>
 		-->
 
+		<!--
+			These entries control where attachment file are uploaded to and how large
+			the files can be.
+			
+			If StoreAttachmentsInDatabase is set to "1", all new attachments
+			will be stored in the SQL database. If StoreAttachmentsInDatabase
+			is set to "0", all new attachments will be stored in the
+			folder indentified by the UploadFolder setting (if uncommented).
+			
+			For the UploadFolder setting, if you specify the folder starting with a 
+			drive letter or the \\ that indicates a UNC path, it's treated as a full path.  
+			For example: c:\\something or \\somemachine\something
+
+			Otherwise it's treated as a path relative to where you virtual directory is
+			located.
+
+			Database storage of attachments is backward compatible with
+			the prior version of BugTracker.NET. If the attachment cannot
+			be found in the database, BugTracker.NET will check the
+			UploadFolder. Therefore, you may enable StoreAttachmentInDatabase
+			even if you have previously used UploadFolder.
+		-->
+		
 		<add key="StoreAttachmentsInDatabase" value="1" />
+		<add key="UploadFolder" value="" />
+		<!--<add key="MaxUploadSize" value="1000000" />-->
+		<add key="MaxUploadSize" value="20111222" />
 	</btnetSettings>
 
 </configuration>
