git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@88 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -335,6 +335,22 @@
 
 
 		<!--
+			There's a special user in the database, "guest". Think of it as a user account that can
+			be shared by several people. The guest user can't save settings and can't save searches.
+			If "AllowGuestWithoutLogin" is set to "0", then the guest user still has to login with
+			a password.  If set to "1", then the guest user doesn't need to even enter a password.
+			Instead, a link will appear on the login page, default.aspx, saying:
+			
+			Continue as "guest" without logging in
+			
+			You can control the per-project permissions of the guest user in the same way as other
+			users EXCEPT that even if you give the guest user permissions beyond View Only and Reporter,
+			the system will automatically reduce his permissions downward.
+		-->
+		<add key="AllowGuestWithoutLogin" value="0"/>
+		
+
+		<!--
 		TextArea for Custom fields
 		This setting is used to format custom defined fields.  If a field is greater than TextAreaThreshold, it will be
 		displayed as a TextArea instead of a normal Input control.  The number of rows in the TextArea is
