git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@95 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -54,7 +54,7 @@
 			Used when creating absolute href's.  For example, in notification emails.
 			Don't forget trailing slash!.
 		-->
-		<add key="AbsoluteUrlPrefix" value="http://127.0.0.1/btnet/"/>
+		<add key="AbsoluteUrlPrefix" value="http://127.0.0.1/btnet2/"/>
 
 
 		<!--
@@ -243,7 +243,7 @@
 			custom fields.  For more info, visit
 			http://www.ifdefined.com/README.html
 		-->
-		<add key="ShowUserDefinedBugAttribute" value="1"/>
+		<add key="ShowUserDefinedBugAttribute" value="0"/>
 		<add key="UserDefinedBugAttributeName" value="MyUDF"/>
 
 
@@ -347,7 +347,7 @@
 			users EXCEPT that even if you give the guest user permissions beyond View Only and Reporter,
 			the system will automatically reduce his permissions downward.
 		-->
-		<add key="AllowGuestWithoutLogin" value="0"/>
+		<add key="AllowGuestWithoutLogin" value="1"/>
 		
 
 		<!--
@@ -593,7 +593,7 @@ Don't call us, we'll call you."/>
 			the external users permissions for that project, and then assign the bug to that other
 			project. 
 		-->
-		<add key="EnableInternalOnlyPosts" value="1"/>
+		<add key="EnableInternalOnlyPosts" value="0"/>
 
 		<!--
 			Turning this on make a "revisions" link visible on the add/edit bug page.
@@ -664,6 +664,47 @@ Don't call us, we'll call you."/>
 		<add key="UploadFolder" value="" />
 		<!--<add key="MaxUploadSize" value="1000000" />-->
 		<add key="MaxUploadSize" value="20111222" />
+		
+		
+		<!--
+			If set to "1", then a passwords need to be at least 8 characters long.
+			The characters in the password need to be from at least 2 of the
+			following categories:
+			* lowercase letters
+			* uppercase letters
+			* numbers
+			* special chars
+		-->
+		<add key="RequireStrongPasswords" value="0" />
+
+		<!--
+			Show "Forgot Password?" link.
+		-->
+		<add key="ShowForgotPasswordLink" value="1" />
+		
+		
+		<!--
+			Allow people to self-register.
+		-->
+		<add key="AllowSelfRegistration" value="1" />
+		
+		
+		<!--
+			When creating a new user as a result of a self-registration,
+			use an existing user's settings, permissions, etc as a template
+			for the new user
+		-->
+		<add key="SelfRegisteredUserTemplate" value="guest" />
+		
+		
+		<!--
+			Number of minutes a new user has between the time they register
+			and the time they must confirm the registration by clicking on
+			the link they received by email
+		-->
+		<add key="RegistrationExpiration" value="20" />
+		
+		
 	</btnetSettings>
 
 </configuration>
