git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@102 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -331,7 +331,7 @@
 		0 = hide
 		-->
 
-		<add key="DefaultPermissionLevel" value="2"/>
+		<add key="DefaultPermissionLevel" value="0"/>
 
 
 		<!--
@@ -685,6 +685,8 @@ Don't call us, we'll call you."/>
 		
 		<!--
 			Allow people to self-register.
+			You must also set "SelfRegisteredUserTemplate".
+			You should also consider setting "RequireStrongPasswords"
 		-->
 		<add key="AllowSelfRegistration" value="1" />
 		
