git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@103 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -667,7 +667,7 @@ Don't call us, we'll call you."/>
 		
 		
 		<!--
-			If set to "1", then a passwords need to be at least 8 characters long.
+			If set to "1", then passwords need to be at least 8 characters long.
 			The characters in the password need to be from at least 2 of the
 			following categories:
 			* lowercase letters
@@ -706,6 +706,14 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="RegistrationExpiration" value="20" />
 		
+
+		<!--
+			Some people have reported problems with the HTML TABLE borders 
+			missing in email notifications.  Actually, the css settings 
+			seem to get ignored entirely.  Setting this to "1"
+			will force the table to have borders even without css.
+		-->
+		<add key="ForceBordersInEmails" value="0" />
 		
 	</btnetSettings>
 
