git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@104 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -145,6 +145,18 @@
 		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
 		-->
 
+
+		<!--
+		These settings work with my GoDaddy account
+		-->
+
+		<!--		
+		<add key="SmtpServer" value="smtpout.secureserver.net"/>
+		<add key="SmtpServerAuthenticateUser" value="ctrager@ifdefined.com"/>
+		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
+		<add key="SmtpServerPort" value="80"/>
+		-->
+
 		<!--
 		Specify the pickup directory if you have the problem described here:
 		http://support.microsoft.com/default.aspx?scid=kb;en-us;816789#8
