git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@111 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -727,6 +727,11 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="ForceBordersInEmails" value="0" />
 		
+		<!--
+		UTF-8
+		-->
+		<add key="ExportToExcelCharset" value="UTF-8" />
+		
 	</btnetSettings>
 
 </configuration>
