git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@118 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -724,6 +724,16 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="ExportToExcelCharset" value="UTF-8" />
 		
+		<!--
+			If this is set to "1", then the list of user names in the dropdowns
+			in the search page is limited to those users who have either reported bugs
+			or have bugs currently assigned to them.  Setting this to "1" might
+			make the search page load slower. Setting it to "0" might result in
+			too many names in the dropdowns on the search page.
+		-->
+		<add key="LimitUsernameDropdownsInSearch" value="1" />
+		
+		
 	</btnetSettings>
 
 </configuration>
