git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@120 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -248,7 +248,7 @@
 			http://www.ifdefined.com/README.html
 		-->
 		<add key="ShowUserDefinedBugAttribute" value="0"/>
-		<add key="UserDefinedBugAttributeName" value="MyUDF"/>
+		<add key="UserDefinedBugAttributeName" value="YourAttribute"/>
 
 
 		<!--
@@ -725,7 +725,7 @@ Don't call us, we'll call you."/>
 			too many names in the dropdowns on the search page.
 		-->
 		<add key="LimitUsernameDropdownsInSearch" value="1" />
-		
+				
 		
 	</btnetSettings>
 
