git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@132 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -319,6 +319,39 @@
 		<add key="LdapUserDistinguishedName" value="uid=$REPLACE_WITH_USERNAME$,ou=people,dc=mycompany,dc=com"/>
 		-->
 
+		<!--		
+        	The default LDAP AuthType is "Basic".  You can override the AuthType here.
+        	The following code snippet shows you what your options are.
+        	
+        	string auth_type = btnet.Util.get_setting(
+                "LdapAuthType","Basic");
+
+            if (auth_type == "Basic")
+                ldap.AuthType = AuthType.Basic;
+            else if (auth_type == "Anonymous")
+                ldap.AuthType = AuthType.Anonymous;
+            else if (auth_type == "Digest")
+                ldap.AuthType = AuthType.Digest;
+            else if (auth_type == "Dpa")
+                ldap.AuthType = AuthType.Dpa;
+            else if (auth_type == "External")
+                ldap.AuthType = AuthType.External;
+            else if (auth_type == "Kerberos")
+                ldap.AuthType = AuthType.Kerberos;
+            else if (auth_type == "Msn")
+                ldap.AuthType = AuthType.Msn;
+            else if (auth_type == "Negotiate")
+                ldap.AuthType = AuthType.Negotiate;
+            else if (auth_type == "Ntlm")
+                ldap.AuthType = AuthType.Ntlm;
+            else if (auth_type == "Sicily")
+                ldap.AuthType = AuthType.Sicily;
+		-->
+		<!--
+		<add key="LdapAuthType" value="Basic"/>
+		-->
+		
+
 		<!--
 
 		When per-project permission is not specified, what is the permission?
