git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@153 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -759,6 +759,8 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="LimitUsernameDropdownsInSearch" value="1" />
 				
+
+		<add key="EnableTags" value="1" />
 		
 	</btnetSettings>
 
