git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@162 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -143,10 +143,10 @@
 		-->
 
 		<!--		
-		<add key="SmtpServer" value="smtpout.secureserver.net"/>
+		<add key="SmtpServer" value="relay-hosting.secureserver.net"/>
 		<add key="SmtpServerAuthenticateUser" value="ctrager@ifdefined.com"/>
 		<add key="SmtpServerAuthenticatePassword" value="MY PASSWORD"/>
-		<add key="SmtpServerPort" value="80"/>
+		<add key="SmtpServerPort" value="25"/>		
 		-->
 
 		<!--
