--- a/Web.config
+++ b/Web.config
@@ -439,8 +439,6 @@
 		<add key="CustomBugLinkUrl" value="your_url.aspx"/>
 		-->
 
-
-
 		<!--
 		You can add to the menu, just to the left of the "about" link
 		You have to HTML encode any HTML tags embedded here.
@@ -600,14 +598,6 @@ Don't call us, we'll call you."/>
 		<add key="StatusResultingFromIncomingEmail" value="0"/>
 
 
-		<!--
-			Make it harder for people to loose data by navigating away from the add/edit bug
-			page by turning this on.
-		-->
-		
-		<add key="PromptBeforeLeavingEditBugPage" value="0"/>
-
-
 
 		<!-- 
 			If you set this to 1, you will see an additional "Visible to internal users only"
@@ -761,6 +751,14 @@ Don't call us, we'll call you."/>
 				
 
 		<add key="EnableTags" value="0" />
+		
+		<!--
+			I'm not 100% sure that FCKEditor, or the way I'm using FCKEditor, 
+			is secure.  It might be possible to use it for Cross-Site-Scripting.
+			If you don't trust it, or me, set this to 1.
+		-->
+		
+		<add key="DisableFCKEditor" value="0" />
 		
 	</btnetSettings>
 
