git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@175 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -749,7 +749,19 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="LimitUsernameDropdownsInSearch" value="1" />
 				
-
+		<!--
+			Enabling tags lets you mark bugs with your own free-form keywords and 
+			then filter bug lists using your keywords.  
+			
+			Note that you might not want to use this feature if you are also using
+			tricky permissions, because the page that displays already-used tags
+			and their counts looks at all bugs, not just the bugs that the user
+			is elegible to see.   That is, if somebody with rights only to project A
+			tags 3 bugs with "Foo", then somebody with rights only to project B
+			will see "Foo(3)" in the tags.aspx page.   Maybe that matters to you, 
+			maybe not.
+			
+		-->
 		<add key="EnableTags" value="1" />
 		
 		<!--
