git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@182 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -779,7 +779,15 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="UseTransmitFileInsteadOfWriteFile" value="1" />
 		
-		
+
+		<!--
+			BugTracker.NET can remember which bugs you have seen or not.  To
+			enable this feature, set this to 1.  You also have to include
+			the $SEEN magic word in your query as explained in edit_query.aspx
+		-->
+		<add key="EnableSeen" value="0" />
+				
+
 	</btnetSettings>
 
 </configuration>
