git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@184 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -762,7 +762,7 @@ Don't call us, we'll call you."/>
 			maybe not.
 			
 		-->
-		<add key="EnableTags" value="1" />
+		<add key="EnableTags" value="0" />
 		
 		<!--
 			I'm not 100% sure that FCKEditor, or the way I'm using FCKEditor, 
@@ -787,6 +787,10 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="EnableSeen" value="0" />
 				
+
+		<add key="EnableWindowsUserAutoRegistration" value="0" />
+		<add key="WindowsUserAutoRegistrationUserTemplate" value="guest" />
+
 
 	</btnetSettings>
 
