git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@185 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -28,7 +28,9 @@
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.DirectoryServices.Protocols, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+				<add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 			</assemblies>
+			
 		</compilation>
 		<pages validateRequest="true" />
 	
@@ -39,6 +41,31 @@
 	</system.web>
 
 	<btnetSettings>
+     
+     	<!-- 
+
+			********* QUICK START *************
+     	
+     		If you want to get started quickly, then just change the following
+     		and then try to log in:
+     		
+				ConnectionString
+				AbsouteUrlPrefix
+				LogFileFolder
+			
+			After you can log in and create a bug, then you probably want to
+			set up the email integration.  Set up the following:
+			
+				ErrorEmailTo
+				ErrorEmailFrom
+
+				NotificationEmailEnabled
+				NotificationEmailFrom
+
+				And your SMTP settings below.
+
+     	-->
+     
      
 		<!--
 			Change this to point to your database
@@ -302,7 +329,7 @@
 
 		-->
 
-		<add key="WindowsAuthentication" value="0"/>
+		<add key="WindowsAuthentication" value="1"/>
 
 		<!--
 			You can have BugTracker.NET check the user's password using an LDAP server instead of
@@ -313,11 +340,10 @@
 			The $REPLACE_WITH_USERNAME$ gets replaced with the username that's typed in by the user
 			when he tries to log on.
 		-->
-		<!--
-		<add key="AuthenticateUsingLdap" value="1"/>
+
+		<add key="AuthenticateUsingLdap" value="0"/>
 		<add key="LdapServer" value="127.0.0.1"/>
 		<add key="LdapUserDistinguishedName" value="uid=$REPLACE_WITH_USERNAME$,ou=people,dc=mycompany,dc=com"/>
-		-->
 
 		<!--		
         	The default LDAP AuthType is "Basic".  You can override the AuthType here.
@@ -347,10 +373,7 @@
             else if (auth_type == "Sicily")
                 ldap.AuthType = AuthType.Sicily;
 		-->
-		<!--
 		<add key="LdapAuthType" value="Basic"/>
-		-->
-		
 
 		<!--
 
@@ -377,8 +400,53 @@
 			users EXCEPT that even if you give the guest user permissions beyond View Only and Reporter,
 			the system will automatically reduce his permissions downward.
 		-->
-		<add key="AllowGuestWithoutLogin" value="1"/>
+		<add key="AllowGuestWithoutLogin" value="0"/>
 		
+		<!--
+			If you have windows security turned on, and if you set 
+			EnableWindowsUserAutoRegistration to "1", then windows users will be
+			automatically added to the BugTracker.NET database as users.
+			
+			The new user will be a clone of the user specified in
+			WindowsUserAutoRegistrationUserTemplate
+		-->
+
+		<add key="EnableWindowsUserAutoRegistration" value="1" />
+		
+		<!--
+		
+			When creating a new user as a result of a auto-registration
+			use an existing user's settings, permissions, etc as a template
+			for the new user
+
+		-->
+		<add key="WindowsUserAutoRegistrationUserTemplate" value="guest" />
+
+		<!-- 
+			The EnableWindowsUserAutoRegistration feature will create 
+			users with just the username filled in.  If you want First Name, 
+			Last Name, etc filled in, BugTracker.NET can get the info from
+			LDAP.  Use the following settings to configure your LDAP lookup.
+		-->
+
+<!--
+                    myLdapConnection.Path = Util.get_setting("WindowsUserAutoRegistrationLdapLookupSearchPath", null);
+                    myLdapConnection.AuthenticationType = (System.DirectoryServices.AuthenticationTypes)System.Enum.Parse(typeof(System.DirectoryServices.AuthenticationTypes), Util.get_setting("LdapAuthType", "Basic"));
+                    myLdapConnection.Username = Util.get_setting("WindowsUserAutoRegistrationLdapLookupUser", string.Empty);
+                    myLdapConnection.Password = Util.get_setting("WindowsUserAutoRegistrationLdapLookupPassword", string.Empty);
+
+                    using (System.DirectoryServices.DirectorySearcher search = new System.DirectoryServices.DirectorySearcher(myLdapConnection))
+                    {
+                        string searchFilter = Util.get_setting("WindowsUserAutoRegistrationLdapLookupUserFiler", "(sAMAccountName=%windows_username%)");
+                        search.Filter = searchFilter.Replace("%windows_username%", windows_username);
+
+
+EnableWindowsUserAutoRegistrationLdapLookup
+WindowsUserAutoRegistrationLdapLookupSearchPath
+WindowsUserAutoRegistrationLdapLookupUser
+WindowsUserAutoRegistrationLdapLookupPassword
+WindowsUserAutoRegistrationLdapLookupUserFiler
+-->		
 
 		<!--
 		TextArea for Custom fields
@@ -386,6 +454,7 @@
 		displayed as a TextArea instead of a normal Input control.  The number of rows in the TextArea is
 		determined by dividing the field length by TextAreaThreshold up to a maximum value indicated by MaxTextAreaRows.
 		-->
+		
 		<add key="TextAreaThreshold" value="80"/>
 		<add key="MaxTextAreaRows" value="3"/>
 
@@ -396,7 +465,6 @@
 		<add key="AppTitle" value="BugTracker.NET"/>
 		<add key="SingularBugLabel" value="bug"/>
 		<add key="PluralBugLabel" value="bugs"/>
-
 
 
 		<!-- customize marker for creating hyperlinks in bug comments -->
@@ -787,10 +855,6 @@ Don't call us, we'll call you."/>
 		-->
 		<add key="EnableSeen" value="0" />
 				
-
-		<add key="EnableWindowsUserAutoRegistration" value="0" />
-		<add key="WindowsUserAutoRegistrationUserTemplate" value="guest" />
-
 
 	</btnetSettings>
 
