git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@186 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -291,6 +291,18 @@
 		-->
 		<add key="CommentSortOrder" value="desc"/>
 
+		<!--
+
+		When per-project permission is not specified, what is the permission?
+		3 = "reporter" allow adds but after bug is added, only allow posting of additional comments
+		2 = allow everything
+		1 = allow view only
+		0 = hide
+		-->
+
+		<add key="DefaultPermissionLevel" value="2"/>
+
+
 
 		<!--
 
@@ -346,45 +358,23 @@
 		<add key="LdapUserDistinguishedName" value="uid=$REPLACE_WITH_USERNAME$,ou=people,dc=mycompany,dc=com"/>
 
 		<!--		
-        	The default LDAP AuthType is "Basic".  You can override the AuthType here.
-        	The following code snippet shows you what your options are.
-        	
-        	string auth_type = btnet.Util.get_setting(
-                "LdapAuthType","Basic");
+        	The LDAP auth type used when checking users' passwords using LDAP.
+        	Choices are:
+				Anonymous
+				Basic
+				Negotiate
+				Ntlm
+				Digest
+				Sicily
+				Dpa
+				Msn
+				External
+				Kerberos
 
-            if (auth_type == "Basic")
-                ldap.AuthType = AuthType.Basic;
-            else if (auth_type == "Anonymous")
-                ldap.AuthType = AuthType.Anonymous;
-            else if (auth_type == "Digest")
-                ldap.AuthType = AuthType.Digest;
-            else if (auth_type == "Dpa")
-                ldap.AuthType = AuthType.Dpa;
-            else if (auth_type == "External")
-                ldap.AuthType = AuthType.External;
-            else if (auth_type == "Kerberos")
-                ldap.AuthType = AuthType.Kerberos;
-            else if (auth_type == "Msn")
-                ldap.AuthType = AuthType.Msn;
-            else if (auth_type == "Negotiate")
-                ldap.AuthType = AuthType.Negotiate;
-            else if (auth_type == "Ntlm")
-                ldap.AuthType = AuthType.Ntlm;
-            else if (auth_type == "Sicily")
-                ldap.AuthType = AuthType.Sicily;
+        	For details, see:
+        	http://msdn.microsoft.com/en-us/library/system.directoryservices.protocols.authtype.aspx
 		-->
 		<add key="LdapAuthType" value="Basic"/>
-
-		<!--
-
-		When per-project permission is not specified, what is the permission?
-		3 = "reporter" allow adds but after bug is added, only allow posting of additional comments
-		2 = allow everything
-		1 = allow view only
-		0 = hide
-		-->
-
-		<add key="DefaultPermissionLevel" value="2"/>
 
 
 		<!--
@@ -422,31 +412,36 @@
 		-->
 		<add key="WindowsUserAutoRegistrationUserTemplate" value="guest" />
 
-		<!-- 
-			The EnableWindowsUserAutoRegistration feature will create 
-			users with just the username filled in.  If you want First Name, 
-			Last Name, etc filled in, BugTracker.NET can get the info from
-			LDAP.  Use the following settings to configure your LDAP lookup.
+
+		<add key="EnableWindowsUserAutoRegistrationLdapSearch" value="1" />
+
+		<!--		
+			Authentication type used for search:
+				None
+				Secure
+				Encryption
+				SecureSocketsLayer
+				ReadonlyServer
+				Anonymous
+				FastBind
+				Signing
+				Sealing
+				Delegation
+				ServerBind
+				
+			For details, see:
+			http://msdn.microsoft.com/en-us/library/system.directoryservices.authenticationtypes.aspx				
 		-->
 
-<!--
-                    myLdapConnection.Path = Util.get_setting("WindowsUserAutoRegistrationLdapLookupSearchPath", null);
-                    myLdapConnection.AuthenticationType = (System.DirectoryServices.AuthenticationTypes)System.Enum.Parse(typeof(System.DirectoryServices.AuthenticationTypes), Util.get_setting("LdapAuthType", "Basic"));
-                    myLdapConnection.Username = Util.get_setting("WindowsUserAutoRegistrationLdapLookupUser", string.Empty);
-                    myLdapConnection.Password = Util.get_setting("WindowsUserAutoRegistrationLdapLookupPassword", string.Empty);
-
-                    using (System.DirectoryServices.DirectorySearcher search = new System.DirectoryServices.DirectorySearcher(myLdapConnection))
-                    {
-                        string searchFilter = Util.get_setting("WindowsUserAutoRegistrationLdapLookupUserFiler", "(sAMAccountName=%windows_username%)");
-                        search.Filter = searchFilter.Replace("%windows_username%", windows_username);
-
-
-EnableWindowsUserAutoRegistrationLdapLookup
-WindowsUserAutoRegistrationLdapLookupSearchPath
-WindowsUserAutoRegistrationLdapLookupUser
-WindowsUserAutoRegistrationLdapLookupPassword
-WindowsUserAutoRegistrationLdapLookupUserFiler
--->		
+		<!-- 
+			Configure how you want BugTracker.NET to search LDAP for a new user's info.
+			These values worked for me when I tested with OpenLDAP
+		-->
+		<add key="LdapDirectoryEntryPath", value="LDAP://127.0.0.1/DC=mycompany,DC=com" />
+		<add key="LdapDirectoryEntryAuthenticationType", value="Anonymous" />
+		<add key="LdapDirectoryEntryUsername", value="" />
+		<add key="LdapDirectoryEntryPassword", value="" />
+		<add key="LdapDirectorySearcherFilter", value="(uid=$REPLACE_WITH_USERNAME$)" />
 
 		<!--
 		TextArea for Custom fields
